# teledep

./: .gitignore  Dockerfile  README.md  create_fake_courses.py  create_fake_courses.sh  create_fake_curators.sh  create_fake_groups.sh  create_fake_profiles.sh  create_fake_sms.py  create_fake_sms.sh  create_fake_streams.py  create_fake_streams.sh  create_fake_students.sh  create_superuser.sh  daemon.sh  docker-compose.yml  logger_config.py  main.py  pyproject.toml  reset_db.sh
