[tool.poetry]
name = "teledep"
version = "0.1.0"
description = ""
authors = ["Nikita Semenov <nasemenov726@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.2"
docker = "^7.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
